--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,33 @@
-<hello name="{{ name }}"></hello>
+<!-- <hello name="{{ name }}"></hello> -->
 
-<app-todo></app-todo>
+<!-- header -->
+<div class="container">
+  <header
+    class="
+      d-flex
+      flex-wrap
+      align-items-center
+      justify-content-center
+      py-3
+      mb-4
+      border-bottom
+    "
+  >
+    <ul class="nav nav-pills">
+      <li class="nav-item">
+        <a href="#" class="nav-link active" aria-current="page">Home</a>
+      </li>
+      <li class="nav-item"><a href="#" class="nav-link">Features</a></li>
+      <li class="nav-item"><a href="#" class="nav-link">Pricing</a></li>
+      <li class="nav-item"><a href="#" class="nav-link">FAQs</a></li>
+      <li class="nav-item"><a href="#" class="nav-link">About</a></li>
+    </ul>
+  </header>
+</div>
+<!-- header -->
+
+<div class="container">
+  <main>
+    <app-todo></app-todo>
+  </main>
+</div>
